# mlopslab-template

./: .gitignore  Makefile  README.md  SETUP.md  dvc.yaml  params.yaml  pyproject.toml  requirements-lock.txt  requirements.txt  setup.sh
.dvc/: .gitignore  config
.github/workflows/: ci.yml
configs/: data.yaml
docker/: docker-compose.yml
docs/: plots.md
scripts/: check_metrics.py  compare_metrics.sh
serve/: Dockerfile  README.md  app.py
src/stages/: __init__.py  evaluate.py  prepare_features.py  prepare_raw.py  train.py  train_arima.py
src/utils/: __init__.py  mlflow_utils.py  repro.py
